--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.7.0",
+    "@types/dotenv": "^4.0.3",
     "nodemon": "^1.18.3"
   }
 }
