--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/platform-server": "6.1.1",
     "@angular/pwa": "^0.7.2",
     "@angular/router": "6.1.1",
+    "@datorama/akita": "^1.9.6",
     "@types/body-parser": "^1.16.5",
     "@types/express": "^4.0.37",
     "@types/jasmine": "^2.5.54",
