--- a/package.json
+++ b/package.json
@@ -16,23 +16,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.1.1",
+    "@angular/animations": "6.1.9",
     "@angular/cdk": "^6.2.0",
-    "@angular/cli": "6.1.2",
-    "@angular/common": "6.1.1",
-    "@angular/compiler": "6.1.1",
-    "@angular/compiler-cli": "6.1.1",
-    "@angular/core": "6.1.1",
-    "@angular/forms": "6.1.1",
-    "@angular/http": "6.1.1",
-    "@angular/language-service": "6.1.1",
+    "@angular/cli": "6.2.4",
+    "@angular/common": "6.1.9",
+    "@angular/compiler": "6.1.9",
+    "@angular/compiler-cli": "6.1.9",
+    "@angular/core": "6.1.9",
+    "@angular/forms": "6.1.9",
+    "@angular/http": "6.1.9",
+    "@angular/language-service": "6.1.9",
     "@angular/material": "^6.4.3",
-    "@angular/platform-browser": "6.1.1",
-    "@angular/platform-browser-dynamic": "6.1.1",
-    "@angular/platform-server": "6.1.1",
+    "@angular/platform-browser": "6.1.9",
+    "@angular/platform-browser-dynamic": "6.1.9",
+    "@angular/platform-server": "6.1.9",
     "@angular/pwa": "^0.7.2",
-    "@angular/router": "6.1.1",
+    "@angular/router": "6.1.9",
     "@datorama/akita": "^1.9.6",
+    "@nebular/theme": "^2.0.1",
     "@types/body-parser": "^1.16.5",
     "@types/express": "^4.0.37",
     "@types/jasmine": "^2.5.54",
@@ -59,7 +60,7 @@
     "morgan": "^1.9.0",
     "protractor": "~5.1.2",
     "rimraf": "^2.6.1",
-    "rxjs": "^6.2.2",
+    "rxjs": "^6.3.3",
     "ts-loader": "^3.5.0",
     "ts-node": "^7.0.0",
     "tslint": "~5.11.0",
