--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
                 "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
               },
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@nebular/theme/styles/prebuilt/default.css",
               "src/sass/styles.scss"
             ],
             "scripts": []
