--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "6.1.9",
-    "@angular/cdk": "^6.2.0",
+    "@angular/cdk": "^6.4.7",
     "@angular/cli": "6.2.4",
     "@angular/common": "6.1.9",
     "@angular/compiler": "6.1.9",
@@ -26,26 +26,26 @@
     "@angular/forms": "6.1.9",
     "@angular/http": "6.1.9",
     "@angular/language-service": "6.1.9",
-    "@angular/material": "^6.4.3",
+    "@angular/material": "^6.4.7",
     "@angular/platform-browser": "6.1.9",
     "@angular/platform-browser-dynamic": "6.1.9",
     "@angular/platform-server": "6.1.9",
-    "@angular/pwa": "^0.7.2",
+    "@angular/pwa": "^0.7.5",
     "@angular/router": "6.1.9",
     "@datorama/akita": "^1.9.6",
     "@nebular/theme": "^2.0.1",
-    "@types/body-parser": "^1.16.5",
-    "@types/express": "^4.0.37",
-    "@types/jasmine": "^2.5.54",
-    "@types/jasminewd2": "~2.0.2",
+    "@types/body-parser": "^1.17.0",
+    "@types/express": "^4.16.0",
+    "@types/jasmine": "^2.8.9",
+    "@types/jasminewd2": "^2.0.5",
     "@types/method-override": "0.0.29",
-    "@types/morgan": "^1.7.32",
-    "@types/node": "^8.0.47",
+    "@types/morgan": "^1.7.35",
+    "@types/node": "^8.10.34",
     "axios": "^0.18.0",
-    "body-parser": "^1.17.2",
-    "bootstrap": "^4.0.0",
-    "codelyzer": "~4.0.0",
-    "core-js": "^2.5.3",
+    "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
+    "codelyzer": "^4.0.2",
+    "core-js": "^2.5.7",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "jasmine-core": "~2.6.2",
@@ -53,23 +53,23 @@
     "karma": "~2.0.5",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "karma-coverage-istanbul-reporter": "^1.4.3",
+    "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "method-override": "^2.3.9",
-    "morgan": "^1.9.0",
+    "method-override": "^2.3.10",
+    "morgan": "^1.9.1",
     "protractor": "~5.1.2",
-    "rimraf": "^2.6.1",
+    "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
     "ts-loader": "^3.5.0",
-    "ts-node": "^7.0.0",
+    "ts-node": "^7.0.1",
     "tslint": "~5.11.0",
     "typescript": "^2.9.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.0",
+    "@angular-devkit/build-angular": "^0.7.5",
     "@types/dotenv": "^4.0.3",
-    "nodemon": "^1.18.3"
+    "nodemon": "^1.18.4"
   }
 }
