--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node --project server ./server/index.ts",
+    "start": "ts-node --project ./server/tsconfig.json ./server/index.ts",
     "start:dev": "nodemon -e ts -w ./server -x npm run server",
     "dev": "ng serve --proxy-config proxy.conf.json",
-    "server": "cross-env NODE_ENV=dev ts-node --project server ./server/index.ts",
+    "server": "ts-node --project ./server/tsconfig.json ./server/index.ts",
     "deploy": "git push origin master && git push heroku master",
     "build": "ng build --prod",
     "test": "ng test",
@@ -46,6 +46,7 @@
     "bootstrap": "^4.1.3",
     "codelyzer": "^4.0.2",
     "core-js": "^2.5.7",
+    "cross-env": "^5.2.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "jasmine-core": "~2.6.2",
@@ -62,7 +63,7 @@
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
     "ts-loader": "^3.5.0",
-    "ts-node": "^7.0.1",
+    "ts-node": "^6.2.0",
     "tslint": "~5.11.0",
     "typescript": "^2.9.2",
     "zone.js": "^0.8.26"
