--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,10 +3,9 @@
   "compilerOptions": {
     "outDir": "../out-tsc/server",
     "baseUrl": "",
+    "module": "commonjs",
     "target": "es6"
   },
   "baseUrl": "../server",
-  "include": [
-    "../server/**/*"
-  ]
+  "include": ["../server/**/*"]
 }
