--- a/angular.json
+++ b/angular.json
@@ -24,8 +24,9 @@
               {
                 "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
               },
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/@nebular/theme/styles/prebuilt/default.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/@nebular/bootstrap/styles/prebuilt/default.css",
               "src/sass/styles.scss"
             ],
             "scripts": []
