--- a/package.json
+++ b/package.json
@@ -48,27 +48,24 @@
     "cross-env": "^5.2.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~2.0.5",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.3",
-    "karma-jasmine": "^1.1.2",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~3.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "method-override": "^2.3.10",
     "morgan": "^1.9.1",
-    "protractor": "~5.1.2",
-    "rimraf": "^2.6.2",
+    "protractor": "~5.4.0",
     "rxjs": "^6.3.3",
-    "ts-loader": "^3.5.0",
-    "ts-node": "^6.2.0",
+    "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "^3.1.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.7.5",
+    "@angular-devkit/build-angular": "~0.10.0",
     "@types/dotenv": "^4.0.3",
     "nodemon": "^1.18.4"
   }
