--- a/angular.json
+++ b/angular.json
@@ -21,9 +21,7 @@
             },
             "assets": ["src/assets", "src/favicon.ico"],
             "styles": [
-              {
-                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
-              },
+              "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/sass/styles.scss"
             ],
