--- a/package.json
+++ b/package.json
@@ -11,45 +11,43 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "ng build --prod"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.2.15",
-    "@angular/cdk": "^7.1.0",
-    "@angular/cli": "7.3.9",
-    "@angular/common": "7.2.15",
-    "@angular/compiler": "7.2.15",
-    "@angular/compiler-cli": "7.2.15",
-    "@angular/core": "7.2.15",
-    "@angular/forms": "7.2.15",
+    "@angular/animations": "8.1.0",
+    "@angular/cdk": "^8.0.2",
+    "@angular/cli": "8.1.0",
+    "@angular/common": "8.1.0",
+    "@angular/compiler": "8.1.0",
+    "@angular/compiler-cli": "8.1.0",
+    "@angular/core": "8.1.0",
+    "@angular/forms": "8.1.0",
     "@angular/http": "7.2.15",
-    "@angular/language-service": "7.2.15",
-    "@angular/material": "^7.1.0",
-    "@angular/platform-browser": "7.2.15",
-    "@angular/platform-browser-dynamic": "7.2.15",
-    "@angular/platform-server": "7.2.15",
-    "@angular/pwa": "^0.13.9",
-    "@angular/router": "7.2.15",
-    "@angular/service-worker": "7.2.15",
-    "@datorama/akita": "^1.22.0",
+    "@angular/language-service": "8.1.0",
+    "@angular/material": "^8.0.2",
+    "@angular/platform-browser": "8.1.0",
+    "@angular/platform-browser-dynamic": "8.1.0",
+    "@angular/platform-server": "8.1.0",
+    "@angular/pwa": "^0.801.0",
+    "@angular/router": "8.1.0",
+    "@angular/service-worker": "8.1.0",
     "@types/body-parser": "^1.17.0",
-    "@types/express": "^4.16.1",
-    "@types/jasmine": "^3.3.12",
+    "@types/express": "^4.17.0",
+    "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "^2.0.6",
     "@types/method-override": "0.0.31",
     "@types/morgan": "^1.7.35",
-    "@types/node": "^12.0.2",
-    "axios": "^0.18.0",
+    "@types/node": "^12.0.12",
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.1.3",
-    "codelyzer": "^4.5.0",
-    "core-js": "^2.5.7",
+    "bootstrap": "^4.3.1",
+    "codelyzer": "^5.1.0",
+    "core-js": "^3.1.4",
     "cross-env": "^5.2.0",
     "dotenv": "^8.0.0",
-    "express": "^4.16.4",
-    "jasmine-core": "~3.3.0",
+    "express": "^4.17.1",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
@@ -60,14 +58,16 @@
     "morgan": "^1.9.1",
     "protractor": "~5.4.2",
     "rxjs": "^6.5.2",
-    "ts-node": "~8.1.0",
-    "tslint": "~5.16.0",
-    "typescript": "3.2.4",
-    "zone.js": "^0.8.29"
+    "ts-node": "~8.3.0",
+    "tslib": "^1.10.0",
+    "tslint": "~5.18.0",
+    "typescript": "3.5.2",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.9",
+    "@angular-devkit/build-angular": "~0.801.0",
+    "@angular-devkit/schematics": "^8.1.0",
     "@types/dotenv": "^6.1.1",
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.1"
   }
 }
