--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@angular/compiler-cli": "8.1.0",
     "@angular/core": "8.1.0",
     "@angular/forms": "8.1.0",
-    "@angular/http": "7.2.15",
     "@angular/language-service": "8.1.0",
     "@angular/material": "^8.0.2",
     "@angular/platform-browser": "8.1.0",
@@ -59,15 +58,16 @@
     "protractor": "~5.4.2",
     "rxjs": "^6.5.2",
     "ts-node": "~8.3.0",
-    "tslib": "^1.10.0",
+    "tslib": "^1.9.0",
     "tslint": "~5.18.0",
     "typescript": "3.5.2",
-    "zone.js": "^0.9.1"
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.801.0",
     "@angular-devkit/schematics": "^8.1.0",
     "@types/dotenv": "^6.1.1",
+    "codelyzer": "^5.0.1",
     "nodemon": "^1.19.1"
   }
 }
