--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/pwa": "^0.801.0",
     "@angular/router": "8.1.0",
     "@angular/service-worker": "8.1.0",
+    "@datorama/akita": "^4.4.1",
     "@types/body-parser": "^1.17.0",
     "@types/express": "^4.17.0",
     "@types/jasmine": "^3.3.13",
@@ -60,12 +61,13 @@
     "ts-node": "~8.3.0",
     "tslib": "^1.9.0",
     "tslint": "~5.18.0",
-    "typescript": "3.5.2",
+    "typescript": "3.4.5",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.801.0",
     "@angular-devkit/schematics": "^8.1.0",
+    "@datorama/akita-ngdevtools": "^3.0.2",
     "@types/dotenv": "^6.1.1",
     "codelyzer": "^5.0.1",
     "nodemon": "^1.19.1"
