--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../out-tsc/server",
+    "outDir": "../dist/server",
     "baseUrl": "",
     "module": "commonjs",
     "target": "es6"
