--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev:server": "nodemon ./dist/server/index.js",
     "dev:client": "ng serve --proxy-config proxy.conf.json -o",
     "deploy": "git push origin master && git push heroku master",
-    "build": "npm run build:server && npm run build:client && build:cpy",
+    "build": "npm run build:server && npm run build:client",
     "build:client": "ng build --prod",
     "build:server": "tsc --project server",
     "build:cpy": "cpy ./server/.env ./dist/server/",
@@ -17,22 +17,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.14",
+    "@angular/animations": "10.0.11",
     "@angular/cdk": "^8.2.3",
-    "@angular/cli": "8.3.21",
-    "@angular/common": "8.2.14",
-    "@angular/compiler": "8.2.14",
-    "@angular/compiler-cli": "8.2.14",
-    "@angular/core": "8.2.14",
-    "@angular/forms": "8.2.14",
-    "@angular/language-service": "8.2.14",
+    "@angular/cli": "10.0.7",
+    "@angular/common": "10.0.11",
+    "@angular/compiler": "10.0.11",
+    "@angular/compiler-cli": "10.0.11",
+    "@angular/core": "10.0.11",
+    "@angular/forms": "10.0.11",
+    "@angular/language-service": "10.0.11",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "8.2.14",
-    "@angular/platform-browser-dynamic": "8.2.14",
-    "@angular/platform-server": "8.2.14",
+    "@angular/platform-browser": "10.0.11",
+    "@angular/platform-browser-dynamic": "10.0.11",
+    "@angular/platform-server": "10.0.11",
     "@angular/pwa": "^0.803.21",
-    "@angular/router": "8.2.14",
-    "@angular/service-worker": "8.2.14",
+    "@angular/router": "10.0.11",
+    "@angular/service-worker": "10.0.11",
     "@datorama/akita": "^4.17.1",
     "@types/body-parser": "^1.17.1",
     "@types/express": "^4.17.2",
@@ -63,12 +63,12 @@
     "ts-node": "~8.5.4",
     "tslib": "^1.9.0",
     "tslint": "~5.20.1",
-    "typescript": "3.4.5",
-    "zone.js": "~0.10.2"
+    "typescript": "3.9.7",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.21",
-    "@angular-devkit/schematics": "^8.3.21",
+    "@angular-devkit/build-angular": "~0.1000.7",
+    "@angular-devkit/schematics": "^10.0.7",
     "@datorama/akita-ngdevtools": "^3.0.2",
     "@types/dotenv": "^8.2.0",
     "cpy-cli": "^3.0.0",
