--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,7 @@
   "projects": {
     "ng-weather-webapp": {
       "root": "",
-      "sourceRoot": "src",
+      "sourceRoot": "src/client/",
       "projectType": "application",
       "architect": {
         "build": {
@@ -13,25 +13,22 @@
           "options": {
             "aot": true,
             "outputPath": "dist/client",
-            "index": "src/index.html",
-            "main": "src/main.ts",
-            "tsConfig": "src/tsconfig.app.json",
-            "polyfills": "src/polyfills.ts",
+            "index": "src/client/index.html",
+            "main": "src/client/main.ts",
+            "tsConfig": "src/client/tsconfig.app.json",
+            "polyfills": "src/client/polyfills.ts",
             "stylePreprocessorOptions": {
-              "includePaths": [
-                "src",
-                "src/themes"
-              ]
+              "includePaths": ["src", "src/themes"]
             },
             "assets": [
-              "src/assets",
-              "src/favicon.ico",
-              "src/manifest.json"
+              "src/client/assets",
+              "src/client/favicon.ico",
+              "src/client/manifest.json"
             ],
             "styles": [
               "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/sass/styles.scss"
+              "src/client/sass/styles.scss"
             ],
             "scripts": []
           },
@@ -54,8 +51,8 @@
               "buildOptimizer": true,
               "fileReplacements": [
                 {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
+                  "replace": "src/client/environments/environment.ts",
+                  "with": "src/client/environments/environment.prod.ts"
                 }
               ],
               "serviceWorker": true
@@ -82,22 +79,22 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "src/test.ts",
+            "main": "src/client/test.ts",
             "karmaConfig": "./karma.conf.js",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.spec.json",
+            "polyfills": "src/client/polyfills.ts",
+            "tsConfig": "src/client/tsconfig.spec.json",
             "scripts": [],
             "styles": [
               {
                 "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
               },
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/sass/styles.scss"
+              "src/client/sass/styles.scss"
             ],
             "assets": [
-              "src/assets",
-              "src/favicon.ico",
-              "src/manifest.json"
+              "src/client/assets",
+              "src/client/favicon.ico",
+              "src/client/manifest.json"
             ]
           }
         },
@@ -105,12 +102,10 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
+              "src/client/tsconfig.app.json",
+              "src/client/tsconfig.spec.json"
             ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
@@ -130,12 +125,8 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "e2e/tsconfig.e2e.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "tsConfig": ["e2e/tsconfig.e2e.json"],
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
