--- a/package.json
+++ b/package.json
@@ -58,10 +58,12 @@
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "protractor": "~7.0.0",
+    "routing-controllers": "^0.9.0-alpha.6",
     "rxjs": "^6.5.4",
     "ts-node": "~8.5.4",
     "tslib": "^2.0.1",
     "tslint": "~6.1.3",
+    "typedi": "^0.8.0",
     "typescript": "3.9.7",
     "zone.js": "~0.10.3"
   },
