--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-weather-webapp",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "license": "MIT",
   "scripts": {
     "start": "node ./dist/server/index.js",
@@ -9,8 +9,8 @@
     "deploy": "git push origin master && git push heroku master",
     "build": "npm run build:server && npm run build:client",
     "build:client": "ng build --prod",
-    "build:server": "tsc --project server",
-    "build:cpy": "cpy ./server/.env ./dist/server/",
+    "build:server": "tsc --project src/server",
+    "build:cpy": "cpy ./src/server/.env ./dist/server/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -43,6 +43,8 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
     "codelyzer": "^6.0.0",
     "core-js": "^3.6.5",
     "cross-env": "^7.0.2",
