--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "module": "commonjs",
-    "outDir": "../../dist/",
+    "outDir": "../../dist/server",
     "baseUrl": "",
     "target": "es2017"
   },
