--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@datorama/akita": "^5.2.2",
     "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.7",
-    "@types/jasmine": "^3.5.13",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/method-override": "0.0.31",
     "@types/morgan": "^1.9.1",
@@ -51,19 +51,19 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.2",
+    "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.1.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
-    "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "protractor": "~7.0.0",
     "routing-controllers": "^0.9.0-alpha.6",
     "rxjs": "^6.5.4",
     "ts-node": "~8.5.4",
-    "tslib": "^2.0.1",
+    "tslib": "^2.0.0",
     "tslint": "~6.1.3",
     "typedi": "^0.8.0",
     "typescript": "4.0.5",
