modify api path

--- a/package.json
+++ b/package.json
@@ -3,13 +3,8 @@
   "version": "3.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "node ./dist/server/index.js",
-    "dev:server": "nodemon ./dist/server/index.js",
-    "dev:client": "ng serve --proxy-config proxy.conf.json -o",
-    "deploy": "git push origin master && git push heroku master",
-    "build": "npm run build:server && npm run build:client",
-    "build:client": "ng build --prod",
-    "build:server": "tsc --project src/server",
+    "start": "ng serve",
+    "build": "ng build --prod",
     "build:cpy": "cpy ./src/server/.env ./dist/server/",
     "test": "ng test",
     "lint": "ng lint",
