--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "ng serve",
-    "build": "ng build --prod",
+    "build": "ng build --configuration production",
     "build:cpy": "cpy ./src/server/.env ./dist/server/",
     "test": "ng test",
     "lint": "ng lint",
@@ -12,21 +12,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "11.2.12",
+    "@angular/animations": "12.2.0",
     "@angular/cdk": "^11.2.11",
-    "@angular/cli": "11.2.11",
-    "@angular/common": "11.2.12",
-    "@angular/compiler": "11.2.12",
-    "@angular/compiler-cli": "11.2.12",
-    "@angular/core": "11.2.12",
-    "@angular/forms": "11.2.12",
-    "@angular/language-service": "11.2.12",
+    "@angular/cli": "12.2.0",
+    "@angular/common": "12.2.0",
+    "@angular/compiler": "12.2.0",
+    "@angular/compiler-cli": "12.2.0",
+    "@angular/core": "12.2.0",
+    "@angular/forms": "12.2.0",
+    "@angular/language-service": "12.2.0",
     "@angular/material": "^11.2.11",
-    "@angular/platform-browser": "11.2.12",
-    "@angular/platform-browser-dynamic": "11.2.12",
-    "@angular/platform-server": "11.2.12",
-    "@angular/router": "11.2.12",
-    "@angular/service-worker": "11.2.12",
+    "@angular/platform-browser": "12.2.0",
+    "@angular/platform-browser-dynamic": "12.2.0",
+    "@angular/platform-server": "12.2.0",
+    "@angular/router": "12.2.0",
+    "@angular/service-worker": "12.2.0",
     "@datorama/akita": "^5.2.2",
     "@netlify/functions": "^0.7.2",
     "@types/body-parser": "^1.19.0",
@@ -62,13 +62,13 @@
     "tslib": "^2.0.3",
     "tslint": "~6.1.3",
     "typedi": "^0.10.0",
-    "typescript": "4.0.5",
-    "zone.js": "~0.11.3"
+    "typescript": "4.3.5",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.11",
-    "@angular-devkit/core": "^11.2.11",
-    "@angular-devkit/schematics": "^11.2.11",
+    "@angular-devkit/build-angular": "~12.2.0",
+    "@angular-devkit/core": "^12.2.0",
+    "@angular-devkit/schematics": "^12.2.0",
     "@datorama/akita-ngdevtools": "^5.0.3",
     "@types/dotenv": "^8.2.0",
     "cpy-cli": "^3.1.1",
