--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts": {
     "start": "ng serve",
     "build": "ng build --configuration production",
-    "build:cpy": "cpy ./src/server/.env ./dist/server/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -27,38 +26,35 @@
     "@angular/platform-server": "15.0.4",
     "@angular/router": "15.0.4",
     "@angular/service-worker": "15.0.4",
-    "@datorama/akita": "^5.2.2",
     "@netlify/functions": "^0.7.2",
     "@types/jasmine": "~3.6.2",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^15.0.2",
     "axios": "^0.21.1",
-    "bootstrap": "^4.5.3",
-    "class-transformer": "^0.4.0",
-    "class-validator": "^0.13.1",
-    "codelyzer": "^6.0.1",
-    "core-js": "^3.6.5",
+    "bootstrap": "^4.6.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "codelyzer": "^6.0.2",
+    "core-js": "^3.27.1",
     "dotenv": "^8.2.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~6.0.0",
-    "karma": "~6.3.2",
-    "karma-chrome-launcher": "~3.1.0",
+    "jasmine-core": "~4.5.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.4.1",
+    "karma-chrome-launcher": "~3.1.1",
     "karma-coverage-istanbul-reporter": "~3.0.3",
-    "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
     "protractor": "~7.0.0",
     "rxjs": "^6.5.4",
     "tslib": "^2.0.3",
     "tslint": "~6.1.3",
     "typescript": "4.8.4",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.4",
     "@angular-devkit/core": "^15.0.4",
     "@angular-devkit/schematics": "^15.0.4",
-    "@datorama/akita-ngdevtools": "^5.0.3",
-    "@types/dotenv": "^8.2.0",
-    "cpy-cli": "^3.1.1"
+    "@types/dotenv": "^8.2.0"
   }
 }
