--- a/angular.json
+++ b/angular.json
@@ -94,6 +94,12 @@
             ],
             "assets": ["src/assets", "src/favicon.ico", "src/manifest.json"]
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": ["src//**/*.ts", "src//**/*.html"]
+          }
         }
       }
     },
@@ -123,8 +129,6 @@
   },
   "cli": {
     "analytics": false,
-    "schematicCollections": [
-      "@datorama/akita"
-    ]
+    "schematicCollections": ["@angular-eslint/schematics"]
   }
 }
