--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "bootstrap": "^4.6.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "codelyzer": "^6.0.2",
     "core-js": "^3.27.1",
     "dotenv": "^8.2.0",
     "jasmine-core": "~4.5.0",
@@ -47,7 +46,6 @@
     "protractor": "~7.0.0",
     "rxjs": "^6.5.4",
     "tslib": "^2.0.3",
-    "tslint": "~6.1.3",
     "typescript": "4.8.4",
     "zone.js": "~0.12.0"
   },
@@ -55,6 +53,15 @@
     "@angular-devkit/build-angular": "^15.0.4",
     "@angular-devkit/core": "^15.0.4",
     "@angular-devkit/schematics": "^15.0.4",
-    "@types/dotenv": "^8.2.0"
+    "@angular-eslint/builder": "15.1.0",
+    "@angular-eslint/eslint-plugin": "15.1.0",
+    "@angular-eslint/eslint-plugin-template": "15.1.0",
+    "@angular-eslint/schematics": "15.1.0",
+    "@angular-eslint/template-parser": "15.1.0",
+    "@types/dotenv": "^8.2.0",
+    "@typescript-eslint/eslint-plugin": "5.44.0",
+    "@typescript-eslint/parser": "5.44.0",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.5.0"
   }
 }
