--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,6 @@
             "assets": ["src/assets", "src/favicon.ico", "src/manifest.json"],
             "styles": [
               "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/sass/styles.scss"
             ],
             "scripts": [],
@@ -54,7 +53,7 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "serviceWorker": true
+              "serviceWorker": "./ngsw-config.json"
             }
           },
           "defaultConfiguration": ""
@@ -89,7 +88,6 @@
                 "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
                 "inject": true
               },
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/sass/styles.scss"
             ],
             "assets": ["src/assets", "src/favicon.ico", "src/manifest.json"]
@@ -99,20 +97,6 @@
           "builder": "@angular-eslint/builder:lint",
           "options": {
             "lintFilePatterns": ["src//**/*.ts", "src//**/*.html"]
-          }
-        }
-      }
-    },
-    "ng-weather-webapp-e2e": {
-      "root": "e2e",
-      "sourceRoot": "e2e",
-      "projectType": "application",
-      "architect": {
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
-          "options": {
-            "protractorConfig": "./protractor.conf.js",
-            "devServerTarget": "ng-weather-webapp:serve"
           }
         }
       }
