refactor: migrate testing framework from Jasmine/Karma to Vitest
- Updated package.json to replace Jasmine and Karma dependencies with Vitest.
- Modified test scripts to use Vitest commands for running tests and generating coverage.
- Refactored existing test files to use Vitest's testing functions and removed async wrappers.
- Added a new test setup file for initializing the Angular testing environment with Vitest.
- Removed the old test.ts file used by Karma.
- Updated tsconfig.spec.json to include Vitest types and the new test setup file.
- Created a new Vitest configuration file for test execution and coverage reporting.

--- a/angular.json
+++ b/angular.json
@@ -16,9 +16,7 @@
             },
             "index": "src/index.html",
             "tsConfig": "src/tsconfig.app.json",
-            "polyfills": [
-              "src/polyfills.ts"
-            ],
+            "polyfills": ["src/polyfills.ts"],
             "stylePreprocessorOptions": {
               "includePaths": ["src", "src/themes"]
             },
@@ -73,24 +71,6 @@
           "builder": "@angular/build:extract-i18n",
           "options": {
             "buildTarget": "ng-weather-webapp:build"
-          }
-        },
-        "test": {
-          "builder": "@angular/build:karma",
-          "options": {
-            "main": "src/test.ts",
-            "karmaConfig": "./karma.conf.js",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.spec.json",
-            "scripts": [],
-            "styles": [
-              {
-                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-                "inject": true
-              },
-              "src/sass/styles.scss"
-            ],
-            "assets": ["src/assets", "src/favicon.ico", "src/manifest.json"]
           }
         },
         "lint": {
