--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,18 +10,12 @@
     "moduleResolution": "bundler",
     "experimentalDecorators": true,
     "target": "ES2022",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2017",
-      "dom"
-    ],
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2017", "dom"],
     "module": "es2020",
-    "baseUrl": "./",
+    "baseUrl": "./src",
     "useDefineForClassFields": false
   },
-  "baseUrl": "src",
   "angularCompilerOptions": {
     "strictTemplates": true
   }
