--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,9 @@
     "moduleResolution": "bundler",
     "experimentalDecorators": true,
     "target": "ES2022",
-    "typeRoots": ["node_modules/@types"],
-    "lib": ["es2017", "dom"],
+    "typeRoots": [
+      "node_modules/@types"
+    ],
     "module": "es2020",
     "baseUrl": "./src",
     "useDefineForClassFields": false
