--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "start": "ng serve",
     "build": "ng build --configuration production",
+    "dev": "netlify dev",
+    "dev:client": "ng serve --proxy-config proxy.conf.json",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
@@ -28,10 +30,14 @@
     "@angular/platform-server": "21.0.6",
     "@angular/router": "21.0.6",
     "@angular/service-worker": "21.0.6",
+    "@netlify/functions": "^5.1.1",
     "@types/node": "^25.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "core-js": "^3.27.1",
+    "dotenv": "^17.2.3",
+    "dotnet": "^1.1.4",
+    "got": "^14.6.5",
     "rxjs": "^6.5.4",
     "tslib": "^2.0.3",
     "typescript": "5.9.3",
