build: add Netlify configuration and refactor forecast service
- Added `netlify.toml` to configure build settings and SPA redirects.
- Added a `build:dev` script to `package.json`.
- Refactored `ForecastService` to use reactive request patterns with `httpResource`, improving how URL parameters and Netlify function paths are handled.
- Updated `DaysForecastComponent` to use signals for location tracking, ensuring the forecast data updates reactively when coordinates are retrieved.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "ng serve",
     "build": "ng build --configuration production",
+    "build:dev": "ng build",
     "dev": "netlify dev",
     "dev:client": "ng serve --proxy-config proxy.conf.json",
     "test": "vitest",
